--- a/markov_chains_TP.ipynb
+++ b/markov_chains_TP.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "7d53e98f",
    "metadata": {},
    "outputs": [],
@@ -121,13 +121,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "29f67cfb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.33333333, 0.33333333, 0.33333333],\n",
+       "       [0.35      , 0.35      , 0.3       ],\n",
+       "       [0.15      , 0.2       , 0.65      ]])"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "# Display the array Q\n",
     "\n",
-    "# Display the array Q"
+    "Q = np.array([[1 / 3, 1 / 3, 1 / 3], [0.35, 0.35, 0.3], [0.15, 0.2, 0.65]])\n",
+    "Q"
    ]
   },
   {
@@ -149,12 +164,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "527bf97a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.33333333, 0.33333333, 0.33333333])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Complete"
+    "# Complete\n",
+    "initial_position = np.array([1 / 3, 1 / 3, 1 / 3])\n",
+    "initial_position"
    ]
   },
   {
