--- a/markov_chains_TP.ipynb
+++ b/markov_chains_TP.ipynb
@@ -164,24 +164,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "id": "527bf97a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.33333333, 0.33333333, 0.33333333])"
+       "array([1, 0, 0])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Complete\n",
-    "initial_position = np.array([1 / 3, 1 / 3, 1 / 3])\n",
+    "initial_position = np.array([1, 0, 0])\n",
     "initial_position"
    ]
   },
@@ -197,11 +197,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "b86a5af3",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Paris : 0.3333333333333333\n",
+      "London: 0.3333333333333333\n",
+      "Berlin: 0.3333333333333333\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Paris :\", initial_position.dot(Q)[0])\n",
+    "print(\"London:\", initial_position.dot(Q)[1])\n",
+    "print(\"Berlin:\", initial_position.dot(Q)[2])"
+   ]
   },
   {
    "cell_type": "markdown",
