--- a/markov_chains_TP.ipynb
+++ b/markov_chains_TP.ipynb
@@ -238,13 +238,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "8ee00210",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.3, 0.4, 0.3])"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "initial_position = np.array([0.3, 0.4, 0.3])\n",
+    "initial_position"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -257,13 +271,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "ea0ed3c5",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.285, 0.3  , 0.415])"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "day_1 = initial_position.dot(Q)\n",
+    "day_1"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -281,13 +309,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "cea3ecd4",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Probability for Emily to be in Paris  on day 2: 0.26225\n",
+      "Probability for Emily to be in London on day 2: 0.283\n",
+      "Probability for Emily to be in Berlin on day 2: 0.45475\n"
+     ]
+    }
+   ],
+   "source": [
+    "day_2 = day_1.dot(Q)\n",
+    "print(\"Probability for Emily to be in Paris  on day 2:\", day_2[0])\n",
+    "print(\"Probability for Emily to be in London on day 2:\", day_2[1])\n",
+    "print(\"Probability for Emily to be in Berlin on day 2:\", day_2[2])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -310,15 +353,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 30,
    "id": "4f54c612",
    "metadata": {},
    "outputs": [],
    "source": [
     "def emily(initial_position, transition_matrix, n_days):\n",
     "    # COMPLETE\n",
-    "    return \n",
-    "    "
+    "    final_position = initial_position\n",
+    "    for i in range(n_days):\n",
+    "        final_position = final_position.dot(transition_matrix)\n",
+    "    return final_position"
    ]
   },
   {
@@ -331,13 +376,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "bb5e9011",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.25093633, 0.27465668, 0.47440699])"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "emily(initial_position, Q, 100)"
+   ]
   },
   {
    "cell_type": "code",
