continued cleaning data

--- a/Amazoff.ipynb
+++ b/Amazoff.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "69b3ee25",
+   "id": "4a1aa016",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,8 +15,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "3198236f",
+   "execution_count": 2,
+   "id": "d57a8912",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,8 +29,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "1440a504",
+   "execution_count": 13,
+   "id": "c6051b1f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,9 +41,12 @@
     "df_sales = df_sales.drop_duplicates()\n",
     "df_products = df_products.drop_duplicates()\n",
     "\n",
-    "# print(df_clients.isnull().sum().sort_values(ascending = False) / len(df_clients))\n",
-    "# print(df_sales.isnull().sum().sort_values(ascending = False) / len(df_sales))\n",
-    "# print(df_products.isnull().sum().sort_values(ascending = False) / len(df_products))\n",
+    "# print(df_clients.isnull().sum()\n",
+    "# .sort_values(ascending = False) / len(df_clients))\n",
+    "# print(df_sales.isnull().sum()\n",
+    "# .sort_values(ascending = False) / len(df_sales))\n",
+    "# print(df_products.isnull().sum()\n",
+    "# .sort_values(ascending = False) / len(df_products))\n",
     "\n",
     "# here was checked whether data was missing or not\n",
     "# and it confirmed there was no missing data detected"
@@ -51,11 +54,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9a707a71",
+   "execution_count": 19,
+   "id": "09d9642c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['client_id', 'sex', 'birth'], dtype='object')\n",
+      "Index(['id_prod', 'date', 'session_id', 'client_id'], dtype='object')\n",
+      "Index(['id_prod', 'price', 'categ'], dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df_clients.columns)\n",
+    "print(df_sales.columns)\n",
+    "print(df_products.columns)\n",
+    "\n",
+    "# while there still are negative prices\n",
+    "while int(df_products[['price']].min()) < 0:\n",
+    "    incorrect_price = df_products['price'].argmin()\n",
+    "    df_products = df_products.drop(\n",
+    "        incorrect_price\n",
+    "    ).reset_index(drop = True) # drop it"
+   ]
   }
  ],
  "metadata": {
