--- a/Amazoff.ipynb
+++ b/Amazoff.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "4a1aa016",
+   "id": "d8857594",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "d57a8912",
+   "id": "fb66e565",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "c6051b1f",
+   "id": "ba34aab2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,31 +54,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "09d9642c",
+   "execution_count": 20,
+   "id": "111cef46",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Index(['client_id', 'sex', 'birth'], dtype='object')\n",
-      "Index(['id_prod', 'date', 'session_id', 'client_id'], dtype='object')\n",
-      "Index(['id_prod', 'price', 'categ'], dtype='object')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(df_clients.columns)\n",
-    "print(df_sales.columns)\n",
-    "print(df_products.columns)\n",
-    "\n",
     "# while there still are negative prices\n",
     "while int(df_products[['price']].min()) < 0:\n",
     "    incorrect_price = df_products['price'].argmin()\n",
     "    df_products = df_products.drop(\n",
     "        incorrect_price\n",
     "    ).reset_index(drop = True) # drop it"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "87872156",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# importing pre-done stats functions\n",
+    "\n",
+    "def avg(v): # average\n",
+    "    sum = 0\n",
+    "    for i in (v):\n",
+    "        sum += i\n",
+    "    return(sum / len(v))\n",
+    "\n",
+    "def var(v): # variance\n",
+    "    diffs = []\n",
+    "    for i in (v): # = SUM of each ((v(i) - avg(v))^2)\n",
+    "        diffs.append((i - avg(v)) ** 2)\n",
+    "    return(avg(diffs)) # = average of above formula\n",
+    "\n",
+    "def stdev(v): # spread\n",
+    "    return(var(v) ** 0.5) # square root = ^0.5\n",
+    "\n",
+    "def med(v): # median\n",
+    "    v.sort() # better sort the list to find which item is in the middle\n",
+    "    if len(v) % 2 == 1 :\n",
+    "        # if v is of odd length\n",
+    "        median = v[int((len(v) - 1) / 2)] # the item in the middle\n",
+    "    else :\n",
+    "        # if v is of even length\n",
+    "        middle = [v[int((len(v) / 2) - 1)], v[int(len(v) / 2)]]\n",
+    "        median = avg(middle) # the average of the two middle-most items\n",
+    "    return(median)"
    ]
   }
  ],
